# esp32_rust_shenanigans

./: Cargo.toml  diagram.json  flake.nix  wokwi.toml
.devcontainer/: devcontainer.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: mf2c77v2hp8mimxnzgcfy8g7jjvdk5vf-source  z394vfm4xw2sd40c4qm428qhi4rmpn1s-source
.github/workflows/: rust_ci.yml
docs/: README.md
scripts/: flash.sh
src/: lib.rs  main.rs  motor.rs
