[package]
name = "embassy_esp32"
version = "0.1.0"
authors = ["xqft <estefano.bargas@fing.edu.uy>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32-hal", version = "0.13.0", features = ["async", "embassy", "embassy-time-timg0"] }
esp-backtrace = { version = "0.7.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.5.0", features = ["esp32"] }
esp-alloc = { version = "0.3.0"}
embassy-time = "0.1.1"
embassy-executor = { version = "0.2.0", features = ["nightly", "arch-xtensa", "integrated-timers", "executor-thread"]}
